--- a/src/modal.html
+++ b/src/modal.html
@@ -1,9 +1,15 @@
 <div>
-    <sly-field title="Add shadow" description="Define transparence">
+    <sly-field title="Drop shadow" description="Define transparence">
         <sly-icon slot="icon" :options="{ color: '#4977ff', bgColor: '#ddf2ff', rounded: false }">
             <i class="zmdi zmdi-fast-forward"></i>
         </sly-icon>
         <el-input-number v-model="state.transparence" :min="0" :max="1"></el-input-number>
+        
+        <div class="fflex mt10">Probability:</div>
+        <sly-icon slot="icon" :options="{ color: '#4977ff', bgColor: '#ddf2ff', rounded: false }">
+            <i class="zmdi zmdi-fast-forward"></i>
+        </sly-icon>
+        <el-input-number v-model="state.probability" :min="0" :max="1"></el-input-number>
     </sly-field>
 
     <sly-field title="Result project" description="Define the name of result project">
