--- a/src/modal.html
+++ b/src/modal.html
@@ -3,11 +3,11 @@
         <sly-icon slot="icon" :options="{ color: '#4977ff', bgColor: '#ddf2ff', rounded: false }">
             <i class="zmdi zmdi-fast-forward"></i>
         </sly-icon>
-        <el-input-number v-model="state.transparence" :min="0" :max="1.0"></el-input-number>
+        <el-input v-model="state.transparence" :min="0" :max="1.0"></el-input>
         
         <div class="fflex mt10">Probability:</div>
  
-        <el-input-number v-model="state.probability" :min="0.0" :max="1.0"></el-input-number>
+        <el-input v-model="state.probability" :min="0.0" :max="1.0"></el-input>
         
         <div class="fflex mt10">Max number of shadow:</div>
         <el-input-number v-model="state.maxShadow" :min="1" :max="5"></el-input-number>
